Add tile animation and result page

--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,19 @@ html {
 }
 
 body {
-  background-color: #404040;
+  background-color: #ffffff;
   color: white;
   font-family: 'Roboto';
 }
 
 nav {
-  background-color: #FFC100;
+  background-color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 2em;
-  min-height: 8vh;
+  min-height: 7vh;
+  border-bottom: 2px solid #748EA0;
 }
 
 .logo {
@@ -39,7 +40,7 @@ nav {
   font-size: 1.8em;
   color: white;
   border: none;
-  background-color: #ff9d00;
+  background-color: #748EA0;
   padding: 0.4em;
   border-radius: 20px;
   transition: all 0.5 ease;
@@ -47,11 +48,11 @@ nav {
 }
 
 .login:hover {
-  background-color: #ee8c00;
+  background-color: #2F4858;
 }
 
 main {
-  height: 92vh;
+  height: 50vh;
   width: 100vw;
   background-color: #696969;
   max-width: 100%;
@@ -64,11 +65,12 @@ main {
 .categories {
   min-height: 100vh;
   width: 100vw;
-  background-color: #420420;
+  background-color: #ffffff;
   max-width: 100%;
-  padding: 50px 10% 0 10%;
+  padding: 50px 20% 0 20%;
   font-size: 20px;
   padding-bottom: 100px;
+  border-top: 2px solid #748EA0;
 }
 
 main {
@@ -77,7 +79,7 @@ main {
   justify-content: center;
 }
 
-main input {
+input {
   padding: 20px;
   font-size: 20px;
   border: none;
@@ -87,9 +89,9 @@ main input {
   margin-right: -3px;
 }
 
-main .search-container button {
+.search-container button {
   padding: 20px;
-  background: #ff9d00;
+  background: #748EA0;
   font-size: 20px;
   border: none;
   cursor: pointer;
@@ -98,15 +100,27 @@ main .search-container button {
   border-radius: 0 50px 50px 0;
 }
 
-main .search-container button:hover {
-  background: #ee8c00;
+.search-container button:hover {
+  background: #2F4858;
+}
+
+.search {
+  height: 20vh;
+  width: 100vw;
+  background-color: #696969;
+  max-width: 100%;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*--------------------*/
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(21%, 1fr));
   grid-gap: 50px;
 }
 
@@ -114,8 +128,38 @@ main .search-container button:hover {
   position: relative;
   border: 2px solid white;
   box-sizing: border-box;
-  border-radius: 30px;
-  background-color: #333333
+  background-color: #2F4858;
+
+}
+
+.container > div:hover {
+  animation: scale .2s linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes scaledown {
+  0% {
+    -webkit-transform: scale (1.06);
+    transform: scale(1.06);
+  }
+
+  100% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
+@keyframes scale {
+  0% {
+    -webkit-transform: scale (1);
+    transform: scale(1);
+  }
+
+  100% {
+    -webkit-transform: scale(1.06);
+    transform: scale(1.06);
+    box-shadow: 10px 10px 40px 10px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .container > div::before {
@@ -145,4 +189,32 @@ main .search-container button:hover {
 .test {
   font-size: 20px;
   padding: 40px;
+  background-color: #2F4858;
+}
+
+.results {
+  position: absolute;
+  background-color: #000000;
+  min-height: 30vh;
+  width: 45vw;
+  margin: 100px 15% 100px 25%;
+}
+
+.result {
+  background-color: #0f0f0f;
+  min-height: 30vh;
+  border-bottom: 1px solid white;
+}
+
+.logo1 {
+  min-height: 30vh;
+  border: 2px solid blue;
+}
+
+.side-menu {
+  margin: 40vh 0 0 2vw;
+  float: left;
+  position: relative;
+  font-size: 40px;
+  color: black;
 }
