--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ nav {
   background-color: #748EA0;
   padding: 0.4em;
   border-radius: 20px;
-  transition: all 0.5 ease;
   min-width: 25vh;
+  transition: all .2s ease-in-out;
 }
 
 .login:hover {
@@ -98,6 +98,8 @@ input {
   min-width: 7vw;
   min-height: 7vh;
   border-radius: 0 50px 50px 0;
+  transition: all .2s ease-in-out;
+
 }
 
 .search-container button:hover {
@@ -129,37 +131,12 @@ input {
   border: 2px solid white;
   box-sizing: border-box;
   background-color: #2F4858;
-
+  transition: all .2s linear;
 }
 
 .container > div:hover {
-  animation: scale .2s linear;
-  animation-fill-mode: forwards;
-}
-
-@keyframes scaledown {
-  0% {
-    -webkit-transform: scale (1.06);
-    transform: scale(1.06);
-  }
-
-  100% {
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
-  }
-}
-
-@keyframes scale {
-  0% {
-    -webkit-transform: scale (1);
-    transform: scale(1);
-  }
-
-  100% {
-    -webkit-transform: scale(1.06);
-    transform: scale(1.06);
-    box-shadow: 10px 10px 40px 10px rgba(0, 0, 0, 0.5);
-  }
+  transform: scale(1.06);
+  box-shadow: 10px 10px 40px 10px rgba(0, 0, 0, 0.5);
 }
 
 .container > div::before {
